--- a/index.html
+++ b/index.html
@@ -11,10 +11,60 @@
 
 <body>
     <h1>OZ TRIP 2023</h1>
-    <footer class="vsse_footer">
-        <div class="vsse_footertext"></div>
-    </footer>
-
+    <div>
+        <p1>Overall</p1>
+        <section>
+            This trip is divided into 4 main part:
+            <p3>First Day Arrival (11/4)</p3>
+            <div>We will stay in the city after a long flight. In case we will be too tired after the flight, we will just relax around the city - walk walk, see see, and Eat eat.</div>
+            <div>Currently looking at this place for Accommodation:</div>
+            <div>
+                <a href="https://www.booking.com/hotel/au/cbd-collins-st-address-near-southern-cross-2-beds.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=458267701_341580824_4_0_0;checkin=2023-04-11;checkout=2023-04-12;dest_id=1593;dest_type=district;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=458267701_341580824_4_0_0;hpos=1;matching_block_id=458267701_341580824_4_0_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=price;sr_pri_blocks=458267701_341580824_4_0_0__12006;srepoch=1678546279;srpvid=c6a8686b36fe055a;type=total;ucfs=1&#hotelTmpl
+"></a>
+            </div>
+            <br/>
+            <br/>
+            <p3>The Great Ocean Road (12/4-14/4)</p3>
+        </section>
+    </div>
+    <div>
+        <h2>11 April</h2>
+        <p>Arriving in Melbourne, will spend the day relaxing and recuperating from the long flight.</p>
+        <p>Accommodation:</p>
+    </div>
+    <div>
+        <h2>12 April</h2>
+    </div>
+    <div>
+        <h2>13 April</h2>
+    </div>
+    <div>
+        <h2>14 April</h2>
+    </div>
+    <div>
+        <h2>15 April</h2>
+    </div>
+    <div>
+        <h2>16 April</h2>
+    </div>
+    <div>
+        <h2>17 April</h2>
+    </div>
+    <div>
+        <h2>18 April</h2>
+    </div>
+    <div>
+        <h2>19 April</h2>
+    </div>
+    <div>
+        <h2>20 April</h2>
+    </div>
+    <div>
+        <h2>21 April</h2>
+    </div>
+    <div>
+        <h2>22 April</h2>
+    </div>
     <script src="vsse.js"></script>
 </body>
 
