--- a/index.html
+++ b/index.html
@@ -12,59 +12,32 @@
 <body>
     <h1>OZ TRIP 2023</h1>
     <div>
-        <p1>Overall</p1>
+        <h2>It's a 4 parts exploration of Melbourne</h2>
         <section>
-            This trip is divided into 4 main part:
-            <p3>First Day Arrival (11/4)</p3>
+            <h3>1. First Day Arrival (11/4)</h3>
+            <br/>
             <div>We will stay in the city after a long flight. In case we will be too tired after the flight, we will just relax around the city - walk walk, see see, and Eat eat.</div>
-            <div>Currently looking at this place for Accommodation:</div>
+            <br/>
+            <h4>Place to stay:</h4>>
             <div>
-                <a href="https://www.booking.com/hotel/au/cbd-collins-st-address-near-southern-cross-2-beds.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=458267701_341580824_4_0_0;checkin=2023-04-11;checkout=2023-04-12;dest_id=1593;dest_type=district;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=458267701_341580824_4_0_0;hpos=1;matching_block_id=458267701_341580824_4_0_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=price;sr_pri_blocks=458267701_341580824_4_0_0__12006;srepoch=1678546279;srpvid=c6a8686b36fe055a;type=total;ucfs=1&#hotelTmpl
-"></a>
+                <a href="https://www.booking.com/hotel/au/cbd-collins-st-address-near-southern-cross-2-beds.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=458267701_341580824_4_0_0;checkin=2023-04-11;checkout=2023-04-12;dest_id=1593;dest_type=district;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=458267701_341580824_4_0_0;hpos=1;matching_block_id=458267701_341580824_4_0_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=price;sr_pri_blocks=458267701_341580824_4_0_0__12006;srepoch=1678546279;srpvid=c6a8686b36fe055a;type=total;ucfs=1&#hotelTmpl">Currently looking at this place for accommodation:</a>
             </div>
             <br/>
             <br/>
-            <p3>The Great Ocean Road (12/4-14/4)</p3>
+            <h3>2. The Great Ocean Road (12/4-14/4)</h3>
+            <br/>
+            <div>During these few days, we will see how great is the ocean road; although we won't be singing "country road .. take me home .." along the drive ...</div>
+            <div>This trip will be mainly about ocean, treking, national park, wild life and everything natural.</div>
+            <br>
+            <div>Browse before you see:</div>
+            <a href="https://www.australia.com/en/places/melbourne-and-surrounds/guide-to-the-great-ocean-road.html"></a>
+            <br/>
+            <h4>Place to stay:</h4>>
+            <a href="https://www.booking.com/hotel/au/great-ocean-road-tourist-park.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=38155202_101911978_4_0_0;checkin=2023-04-12;checkout=2023-04-14;dest_id=3724;dest_type=region;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=38155202_101911978_4_0_0;hpos=1;matching_block_id=38155202_101911978_4_0_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=38155202_101911978_4_0_0__44000;srepoch=1678592423;srpvid=8f8219d291cf00fb;type=total;ucfs=1&#hotelTmpl"></a>
+            <a href="https://www.booking.com/hotel/au/the-terang-motor-inn-terang.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=172461903_308967104_4_2_0;checkin=2023-04-12;checkout=2023-04-14;dest_id=-1604118;dest_type=city;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=172461903_308967104_4_2_0;hpos=1;matching_block_id=172461903_308967104_4_2_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=172461903_308967104_4_2_0__32000;srepoch=1678457520;srpvid=e64463d7ea880059;type=total;ucfs=1&#hotelTmpl"></a>
         </section>
     </div>
-    <div>
-        <h2>11 April</h2>
-        <p>Arriving in Melbourne, will spend the day relaxing and recuperating from the long flight.</p>
-        <p>Accommodation:</p>
-    </div>
-    <div>
-        <h2>12 April</h2>
-    </div>
-    <div>
-        <h2>13 April</h2>
-    </div>
-    <div>
-        <h2>14 April</h2>
-    </div>
-    <div>
-        <h2>15 April</h2>
-    </div>
-    <div>
-        <h2>16 April</h2>
-    </div>
-    <div>
-        <h2>17 April</h2>
-    </div>
-    <div>
-        <h2>18 April</h2>
-    </div>
-    <div>
-        <h2>19 April</h2>
-    </div>
-    <div>
-        <h2>20 April</h2>
-    </div>
-    <div>
-        <h2>21 April</h2>
-    </div>
-    <div>
-        <h2>22 April</h2>
-    </div>
+
     <script src="vsse.js"></script>
 </body>
 
