--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>OZ TRIP 2023</h1>
     <div>
-        <h2>Melbourne, Here We Come!</h2>
+        <h2 id="vsse_headeradyourad">Melbourne, Here We Come!</h2>
         <img src="melbourne_wide.jfif" style="width:100%;height:50vh">
         <br/>
         <br/>
@@ -67,7 +67,7 @@
                 <h3>3. The Suburbs (15/4-18/4)</h3>
                 <div style="display: flex column; ">               
                 <div>
-                    <div>We will live in the eastern suburbs during these few days. We will try to get a taste what it's like as a Melbourne suburbian.</div>
+                    <div>We will live in the eastern suburbs during these few days. We will try to get a taste of what it's like as a Melbourne suburbian.</div>
                     <br/>
                     <div>Will be having day trips to Mornington Beach, Yarra Valley, Phillip Islands, etc; in between visiting friends and relatives.</div>
                     <br/>
@@ -98,6 +98,8 @@
                 <br/>
                 <br/>                
             </div>
+            <br/>
+            <br/>        
             <div>
                 <h3>4. Back to the City (19/4-21/4)</h3>
                 <br/>
