--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 </head>
 
 <body>
-    <h1>OZ TRIP 2023</h1>
+    <h1 id="vsse_bodyvisionthere" style="padding:1rem;background-color: #333; color:#eee;">
+        OZ TRIP 2023
+    </h1>
     <div>
         <h2 id="vsse_headeradyourad">Melbourne, Here We Come!</h2>
-        <img src="melbourne_wide.jfif" style="width:100%;height:50vh">
+        <img src="melbourne_wide.jfif" style="width:100%;height:30vh">
         <br/>
         <br/>
         <div style="display: flex column;">
@@ -22,7 +24,7 @@
                 <br/>
                 <div style="display: flex;">
                     <div>
-                        <img src=" touch_down.jfif " " />
+                        <img src=" touch_down.jfif" " />
                     </div>
                     <div>
                         <div>We will stay in the city after a long flight.</div>
@@ -40,7 +42,7 @@
                 <br/>
                 <br/>
             </div>
-            <div>            
+            <div>
                 <h3>2. The Great Ocean Road (12/4-14/4)</h3>
                 <div style="display: flex; ">
                     <div>
@@ -54,29 +56,29 @@
                         <br/>
                         <h4>Place to stay:</h4>
                         <a href="https://www.booking.com/hotel/au/great-ocean-road-tourist-park.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=38155202_101911978_4_0_0;checkin=2023-04-12;checkout=2023-04-14;dest_id=3724;dest_type=region;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=38155202_101911978_4_0_0;hpos=1;matching_block_id=38155202_101911978_4_0_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=38155202_101911978_4_0_0__44000;srepoch=1678592423;srpvid=8f8219d291cf00fb;type=total;ucfs=1&#hotelTmpl ">Tourist Park</a>            OR
-                        <a href="https://www.booking.com/hotel/au/the-terang-motor-inn-terang.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=172461903_308967104_4_2_0;checkin=2023-04-12;checkout=2023-04-14;dest_id=-1604118;dest_type=city;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=172461903_308967104_4_2_0;hpos=1;matching_block_id=172461903_308967104_4_2_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=172461903_308967104_4_2_0__32000;srepoch=1678457520;srpvid=e64463d7ea880059;type=total;ucfs=1&#hotelTmpl ">Terang</a>                
+                        <a href="https://www.booking.com/hotel/au/the-terang-motor-inn-terang.en-gb.html?aid=1471885&sid=bcf0de759757d74ac81a8384411fe993&all_sr_blocks=172461903_308967104_4_2_0;checkin=2023-04-12;checkout=2023-04-14;dest_id=-1604118;dest_type=city;dist=0;group_adults=4;group_children=0;hapos=1;highlighted_blocks=172461903_308967104_4_2_0;hpos=1;matching_block_id=172461903_308967104_4_2_0;no_rooms=1;req_adults=4;req_children=0;room1=A%2CA%2CA%2CA;sb_price_type=total;sr_order=popularity;sr_pri_blocks=172461903_308967104_4_2_0__32000;srepoch=1678457520;srpvid=e64463d7ea880059;type=total;ucfs=1&#hotelTmpl ">Terang</a>
                     </div>
                     <div>
                         <img src="great_ocean_road.jpg " style="float:right;height:80%; " />
                     </div>
-                </div>                
+                </div>
                 </div>
             <br/>
-            <br/>        
+            <br/>
             <div style="margin-top:2rem; ">
                 <h3>3. The Suburbs (15/4-18/4)</h3>
-                <div style="display: flex column; ">               
+                <div style="display: flex column; ">
                 <div>
                     <div>We will live in the eastern suburbs during these few days. We will try to get a taste of what it's like as a Melbourne suburbian.</div>
                     <br/>
                     <div>Will be having day trips to Mornington Beach, Yarra Valley, Phillip Islands, etc; in between visiting friends and relatives.</div>
                     <br/>
-                        
+
                 </div>
                 <div style="display:flex; ">
                     <img src="yarra_valley.jpg " style="float:left;width:30%; " />
                     <img src="mornington.jpg " style="float:right;width:30%; " />
-                    <img src="phillip_island.jpg " style="float:left;width:30%; " />                    
+                    <img src="phillip_island.jpg " style="float:left;width:30%; " />
                 </div>
                 <h4>Browse before you see:</h4>
                 <a href="https://www.australia.com/en/places/melbourne-and-surrounds/guide-to-yarra-valley-dandenong-ranges.html ">Yarra Valley</a>
@@ -96,10 +98,10 @@
                 OR
                 <a href="https://www.airbnb.com/rooms/43772216?adults=4&check_in=2023-04-16&federated_search_id=eb39e8ba-3c99-47d6-8a47-fee3830d173d&source_impression_id=p3_1678243413_BdqX8afM15KTt2tA&guests=1&check_out=2023-04-22 ">Bundoora airbnb</a>
                 <br/>
-                <br/>                
+                <br/>
             </div>
             <br/>
-            <br/>        
+            <br/>
             <div>
                 <h3>4. Back to the City (19/4-21/4)</h3>
                 <br/>
@@ -122,24 +124,29 @@
                 </div>
                 <br/>
                 <br/>
-                <div>            
+                <div>
                     <h1 style="text-align: center; ">.</h1>
-                    </div>  <div>            
+                    </div>  <div>
                         <h1 style="text-align: center; ">.</h1>
-                        </div>  <div>            
+                        </div>  <div>
                             <h1 style="text-align: center; ">.</h1>
-                            </div>  <div>            
+                            </div>  <div>
                                 <h1 style="text-align: center; ">.</h1>
-                                </div>  
-                <div>   
-                    <h1 style="text-align: center; ">22/4</h1>         
-                <h1 style="text-align: center; ">HOME SWEET HOME</h1>
-                </div>  
-        </div>
-        
-    </div>
+                                </div>
+                <div>
+                    <h1 style="text-align: center; ">22/4</h1>
+                    <div style="display:flex;justify-content: center; ">
+                        <h1 id='homesweethome'>HOME SWEET HOME</h1>
+                    </div>
+                </div>
+                <br/>
+                <br/>
+                <br/>
+            </div>
 
-    <script src="vsse.js "></script>
+        </div>
+
+        <script src="vsse.js "></script>
 </body>
 
 </html>
