--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
         header {
             background-image: linear-gradient(rgba(22, 22, 121, .6), rgba(22, 22, 121, .1));
+            position: sticky;
+            top: 0;
         }
 
         body {
             background-image: url("./img_3sm/background.svg");
             background-size: cover;
+            overflow: hidden;
         }
 
         h1 {
