--- a/index.html
+++ b/index.html
@@ -294,8 +294,9 @@
             font-size: 3rem;
             font-weight:900;
             text-align: left;
+            letter-spacing: 5px;
 
-            color: rgb(227, 237, 238);
+            color: rgb(224, 105, 36);
 
             margin-left: 15rem;
             width: 60%;
