--- a/index.html
+++ b/index.html
@@ -279,36 +279,101 @@
             animation-fill-mode: forwards;
         }
 
-        .ourProducts {
-            width: 90vw;
-            height: 65vh;
-            min-height: 60vh;
+        .backgroundItems {
             display: flex;
+            height: 65vh;
+            min-height: 65vh;
+        }
+
+        .backgroundItemsLeft {            
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            height: 100%;
+        }
+
+        .backgroundItemsRight {
+            margin-top: 4vh;
+            margin-left: 6vw;
+        }
+        .backgroundItemsRightImgDiv{            
+            height: auto;
+        }
+        .backgroundItemsRightImgDiv>img{
+            width:30vw;
+            height: auto;
+            object-fit: contain;
+        }
+
+        .SecAndEff span {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 4.5rem;
+            font-weight: 800;
+            text-align: left;
+            letter-spacing: 2px;
+
+            color:#efefef;
+
+            margin:3rem;
+        }
+
+        .SecAndEff2{
+            padding-left: 3rem;
+        }
+
+        .mission{
+            animation: missionSlideIn 1.5s;
+            animation-iteration-count: 1;
+            animation-fill-mode: forwards;
+        }
+
+        .mission2{
+            padding-left: 3rem;
+        }
+        .mission3{
+            padding-left: 5rem;
+        }
+        .mission span{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 1.2rem;
+            font-weight: 600;
+            text-align: left;
+
+            color:#efefef;
+
+            margin:5rem;            
+        }
+
+        .ourProducts {
+            /* width: 90vw;
+            height: 65vh;
+            min-height: 60vh; */
+            /* display: flex;
             flex-direction: column;
             justify-content: end;
             align-items: start;
-            margin-bottom: 2rem;
+            margin-bottom: 2rem; */
         }
 
         .ourProductsTitle {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-size: 3rem;
-            font-weight:900;
+            font-weight: 900;
             text-align: left;
             letter-spacing: 5px;
 
             color: rgb(224, 105, 36);
 
-            margin-left: 15rem;
+            margin-left: 8rem;
             width: 60%;
 
             align-self: flex-start;
 
-            animation: ourProductsInitRise 2s;
+            animation: ourProductsInitRise 1.5s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
 
-        
         .catalog {
             display: flex;
             flex-direction: column;
@@ -447,7 +512,7 @@
             overflow: hidden;
         }
 
-        #servicesWIP{
+        #servicesWIP {
             animation: servicesFloat 8s;
             animation-iteration-count: infinite;
             animation-delay: 3s;
@@ -464,7 +529,7 @@
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
-        
+
         .contact {
             position: fixed;
             top: 10vh;
@@ -632,6 +697,16 @@
             }
         }
 
+        @keyframes missionSlideIn {
+            0% {
+                transform: translate(-50vw, 0);
+            }
+
+            100% {
+                transform: translate(0, 0);
+            }
+        }
+
         @keyframes ourProductsInitRise {
             0% {
                 transform: translate(0, 60vh);
@@ -721,13 +796,61 @@
         }
 
         @keyframes servicesFloat {
-            0%{transform: translate(0, 0vh);font-style: normal;font-size: 1rem;letter-spacing: 3px;font-weight: 100;}
-            20%{transform: translate(5vw, 0vh);font-style: normal;font-size: 1rem;letter-spacing: 3px;font-weight: 100;}
-            30%{transform: translate(10vw, 10vh);font-style: italic;font-size: 1.2rem;letter-spacing: 15px;font-weight: 300;}
-            50%{transform: translate(-5vw, 20vh);font-style: normal;font-size: 0.8rem;letter-spacing: 10px;font-weight: 500;}
-            70%{transform: translate(10vw, 30vh);font-style:italic;font-size: 1.5rem;letter-spacing: 5px;font-weight: 900;}
-            90%{transform: translate(0vw, 20vh);font-style: italic;font-size: 1.2em;letter-spacing: 10px;font-weight: 800;}
-            100%{transform: translate(0vw, 0vh);font-style: normal;font-size: 1rem;letter-spacing: 3px;font-weight: 200;}
+            0% {
+                transform: translate(0, 0vh);
+                font-style: normal;
+                font-size: 1rem;
+                letter-spacing: 3px;
+                font-weight: 100;
+            }
+
+            20% {
+                transform: translate(5vw, 0vh);
+                font-style: normal;
+                font-size: 1rem;
+                letter-spacing: 3px;
+                font-weight: 100;
+            }
+
+            30% {
+                transform: translate(10vw, 10vh);
+                font-style: italic;
+                font-size: 1.2rem;
+                letter-spacing: 15px;
+                font-weight: 300;
+            }
+
+            50% {
+                transform: translate(-5vw, 20vh);
+                font-style: normal;
+                font-size: 0.8rem;
+                letter-spacing: 10px;
+                font-weight: 500;
+            }
+
+            70% {
+                transform: translate(10vw, 30vh);
+                font-style: italic;
+                font-size: 1.5rem;
+                letter-spacing: 5px;
+                font-weight: 900;
+            }
+
+            90% {
+                transform: translate(0vw, 20vh);
+                font-style: italic;
+                font-size: 1.2em;
+                letter-spacing: 10px;
+                font-weight: 800;
+            }
+
+            100% {
+                transform: translate(0vw, 0vh);
+                font-style: normal;
+                font-size: 1rem;
+                letter-spacing: 3px;
+                font-weight: 200;
+            }
         }
 
         @keyframes servicesSurface {
@@ -830,7 +953,7 @@
         </div>
     </header>
 
-    <!-- DivAboutUs -->
+    <!-- drop in details - start -->
     <div class="aboutUs">
         <div class="detailTitle3sm">
             <div class="detailTitle3smImgDiv"><img class="detailTitle3smImg" src="./img_3sm/logo_3sm.svg" /></div>
@@ -896,11 +1019,32 @@
         <div id="servicesWIP">WORK IN PROGRESS ...</div>
         <button class="buttonX" id="servicesExit">X</button>
     </div>
-    <div class="ourProducts">
-        <div class="ourProductsTitle">
-            Our Products
+    <!-- drop in details - end -->
+
+    <!-- background items - start -->
+    <div class="backgroundItems">
+        <div class="backgroundItemsLeft">
+            <div class="SecAndEff">
+                <span class="SecAndEff1">Securities</span><br/>
+                <span class="SecAndEff2">and Efficiencies</span> 
+            </div>
+            <div class="mission">
+                <span class="mission1">Offering cutting-edge IoT solutions,</span><br/>
+                <span class="mission2">we enhance security and efficiency while providing</span><br/>
+                <span class="mission3">user-friendly, customizable products and excellent customer support.</span><br/>
+            </div>
+            <div class="ourProducts">
+                <div class="ourProductsTitle">
+                    Our Products _
+                </div>
+            </div>
+        </div>
+        <div class="backgroundItemsRight">
+            <div class="backgroundItemsRightImgDiv"><img src="img_3sm/background_iot.svg"/></div>
         </div>
     </div>
+    <!-- background items - end -->
+
     <div class="catalog">
         <div class="catalog3smTitle detailTitle3sm">
             <div class="detailTitle3smImgDiv"><img class="detailTitle3smImg" src="./img_3sm/logo_3sm.svg" /></div>
@@ -984,6 +1128,7 @@
             <button class="buttonX" id="catalogExit">X</button>
         </div>
     </div>
+
 </body>
 <script>
 
