--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
         }
 
         .aboutUsSurface {
-            animation: aboutUsSurface .8s;
+            animation: aboutUsSurface 2s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
 
         .aboutUsSubmerge {
-            animation: aboutUsSubmerge .5s;
+            animation: aboutUsSubmerge 2s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
@@ -550,13 +550,13 @@
         }
 
         .contactSurface {
-            animation: contactSurface .5s;
+            animation: contactSurface 1s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
 
         .contactSubmerge {
-            animation: contactSubmerge .5s;
+            animation: contactSubmerge 1s;
             animation-iteration-count: 1;
             animation-fill-mode: forwards;
         }
