--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
 
             #background_internet_of_things {
                 position: absolute;
-                top: 90vh;
+                top: 60vh;
                 /* right: 20vw; */
                 width: 100%;
                 z-index: 1;
@@ -1288,8 +1288,9 @@
             <div class="mission">
                 <div class="mission1">Offering cutting-edge IoT solutions, <br>
                     we enhance automation and efficiency  <br>
-                    while providing user-friendly, customizable <br>
-                    products and excellent customer support.</div>
+                    while providing user-friendly,  <br>
+                    customizable products and <br>
+                    excellent customer support.</div>
                 <!-- <div class="mission1">Offering cutting-edge IoT solutions,</div>
                 <div class="mission2">we enhance automation and efficiency while providing</div>
                 <div class="mission3">user-friendly, customizable products and excellent customer support.</div> -->
